--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="fa-IR">
+<html lang="fa-IR" dir="rtl">
 <head>
   <meta charset="utf-8">
   <title>HushaERP : مجتمع ابری هوشا</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 <body>
 <app-root></app-root>
